--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,11 @@
-/*下面的html/h1/body等都是selector选择器*/
+/*
+    左大括号前面的就是 选择器, 包含以下几种:
+        元素选择器: 例如html/h1/body这种都是;
+        ID 选择器: #my-id;
+        类选择器: .my-class;
+        属性选择器: 例如 img[src];
+        伪（Pseudo）类选择器: 例如 a:hover 仅在鼠标指针悬停在链接上时选择 <a>;
+*/
 html {
     /* px 表示“像素（pixels）”: 基础字号为 10 像素 */
     font-size: 10px;
@@ -38,4 +45,12 @@ img {
 
 button {
     text-align: center;
+}
+
+#curr_date {
+    text-align: right;
+    margin-bottom: 0px;
+    margin-right: 5px;
+    height: 20px;
+    font-size: 20px;
 }
